新增指标图标